[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dewey"
version = "0.2.0"
description = "Dewey — Guaranteed delivery engine for Python. Postgres-backed task delivery with multi-channel notifications."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Frankapps", email = "hello@frankapps.com"}
]
keywords = [
    "task", "queue", "ledger", "guaranteed-delivery", "notifications",
    "postgres", "sqlalchemy", "django", "huey", "celery",
    "dead-letter", "retry", "backoff", "sweep",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

[project.optional-dependencies]
sqlalchemy = [
    "sqlalchemy>=2.0",
]
async = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
]
django = [
    "Django>=4.2",
]
huey = [
    "huey>=2.5",
]
celery = [
    "celery>=5.3",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-django>=4.5",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.1.0",
    "basedpyright>=1.31.0",
    "twine>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21.0",
    "Django>=4.2",
    "psycopg2-binary>=2.9",
    "huey>=2.5",
    "celery>=5.3",
]

[project.urls]
Homepage = "https://github.com/frankapps-io/dewey"
Documentation = "https://github.com/frankapps-io/dewey"
Repository = "https://github.com/frankapps-io/dewey"
"Bug Tracker" = "https://github.com/frankapps-io/dewey/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "--cov=dewey --cov-report=term-missing"
DJANGO_SETTINGS_MODULE = "tests.django_settings"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["dewey"]

[tool.basedpyright]
pythonVersion = "3.11"
include = ["src/dewey"]
exclude = ["**/__pycache__", "build", "dist"]
typeCheckingMode = "standard"

# Django ORM is intractable to type-check without django-stubs (and even then it's noisy):
# `.objects`, `.DoesNotExist`, model field class-attributes as defaults, etc.
# We type-check core/sqlalchemy/adapters strictly and treat src/dewey/django as opaque.
# Consumers' own Django code is unaffected — this only applies to Dewey's internals.
[[tool.basedpyright.executionEnvironments]]
root = "src/dewey/django"
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportAssignmentType = "none"
reportGeneralTypeIssues = "none"
